2022-03-02 Sebastian 'basxto' Riedel <sdcc@basxto.de>

	* device/lib/_memset.c,
	  device/lib/sm83/abs.s,
	  device/lib/sm83/crt0.s,
	  device/lib/sm83/memcpy.s,
	  device/lib/sm83/setjmp.s:
	  Improve sm83 assembly.

2022-03-01 Sebastian 'basxto' Riedel <sdcc@basxto.de>

	* sdas/asxxsrc/asdata.c,
	  sdas/asxxsrc/asmain.c,
	  sdas/asxxsrc/asxxxx.h:
	  Add -h and hidden -t flags.
	* sdas/asgb/gbadr.c,
	  sdas/asgb/gb.h:
	  Reduce customizations.

2022-03-01 Sebastian 'basxto' Riedel <sdcc@basxto.de>

	* src/z80/peeph.def:
	  Improve stdlib code through peephole rules.

2022-02-28 Gabriele Gorla <gorlik@yahoo.com>

	* sdcc/src/mos6502/gen.c:
	  Refactor storeRegToAop()

2022-02-28 Sebastian 'basxto' Riedel <sdcc@basxto.de>

	* sdas/asz80/z80adr.c,
	  sdas/asz80/z80mch.c:
	  Merge error messages from upstream ASxxxx 5.40.
	  Add a few for extensions/custom ports. Part 2.

2022-02-27 Gabriele Gorla <gorlik@yahoo.com>

	* sdcc/src/mos6502/ralloc.c,
	  sdcc/src/mos6502/gen.c:
	  Remove freeAllRegs()
  	* sdcc/src/mos6502/gen.c:
  	  Fix corner cases in assignResultValue() and genPointerSet()
  	* sdcc/support/regression/ports/mos6502/spec.mk
  	  Removed redundant --out-fmt-ihx command line option
  	* sdcc/device/lib/mos6502/_strcpy.s,
  	  sdcc/device/lib/mos6502/_strcmp.s,
  	  sdcc/device/lib/mos6502/_mullong.s,
  	  sdcc/device/lib/mos6502/_mulint.s,
  	  sdcc/device/lib/mos6502/_divuint.s,
  	  sdcc/device/lib/mos6502/_divulong.s,
  	  sdcc/device/lib/mos6502/__memcpy.s:
  	  Move function parameters to overlay segment.
  	* sdcc/device/lib/mos6502/_divsint.s,
  	  sdcc/device/lib/mos6502/_divslong.s,
  	  sdcc/device/lib/mos6502/_modsint.s,
  	  sdcc/device/lib/mos6502/_modslong.s,
  	  sdcc/device/lib/mos6502/_moduint.s,
  	  sdcc/device/lib/mos6502/_modulong.s,
  	  sdcc/device/lib/mos6502/_mulschar.s,
  	  sdcc/device/lib/mos6502/_muluchar.s,
  	  sdcc/device/lib/mos6502/abs.c:
  	  Add assembly implementation of divs, mod, mulchar and abs.