@@ -2,7 +2,7 @@
 ;  mul.s
 ;
 ;  Copyright (C) 2000, Michael Hope
-;  Copyright (C) 2021, Sebastian 'basxto' Riedel (sdcc@basxto.de)
+;  Copyright (C) 2021-2022, Sebastian 'basxto' Riedel (sdcc@basxto.de)
 ;  Copyright (c) 2021, Philipp Klaus Krause
 ;
 ;  This library is free software; you can redistribute it and/or modify it
@@ -42,16 +42,20 @@
 
 __mulsuchar:
 	ld	c, a
-	ld	b, #0
-
         jr      signexte
 
 __muluschar:
 	ld	c, e
-	ld	b, #0
 	ld	e, a
 
-        jr      signexte
+signexte:
+        ld      a,e
+        rla
+        sbc     a,a
+        ld      d,a
+
+        xor     a
+        jr      .mul8
 
 __mulschar:
 	; Sign-extend before going in.
@@ -60,20 +64,11 @@ __mulschar:
         rla
         sbc     a,a
         ld      b,a
-signexte:
+
         ld      a,e
         rla
         sbc     a,a
         ld      d,a
-
-        jp      .mul16
-
-__muluchar:
-	ld	c, a
-
-	; Clear the top
-	ld	d, #0
-	ld	b, d
 
 __mulint:
         ;; 16-bit multiplication
@@ -87,29 +82,72 @@ __mulint:
         ;;
         ;; Register used: AF,BC,DE,HL
 .mul16:
-        ld      hl,#0
+        ;; Let the smaller number loop
         ld      a,b
-        ; ld c,c
-        ld      b,#16
-
+        cp      a,d
+        jr      c, keep
+        ;; d <= b
+        ld      a, e
+        ld      e, c
+        ld      c, a
+        ld      a, d
+        ld      d, b
+        ld      b, a
+keep:
         ;; Optimise for the case when this side has 8 bits of data or
         ;; less.  This is often the case with support address calls.
         or      a
-        jp      NZ,1$
-
-        ld      b,#8
-        ld      a,c
-1$:
+        jp      Z, .mul8
+        
+        ld      l,#0
+        ld      b,#16
+loop16:
         ;; Taken from z88dk, which originally borrowed from the
         ;; Spectrum rom.
         add     hl,hl
         rl      c
         rla                     ;DLE 27/11/98
-        jp      NC,2$
+        jr      NC,skip16
         add     hl,de
-2$:
+skip16:
         dec     b
-        jr      NZ,1$
+        jr      NZ,loop16
+
+        ;; Return in bc
+        ld      c,l
+        ld      b,h
+
+        ret
+
+__muluchar:
+	ld	c, a
+        xor     a
+	;; Clear the top
+	ld	d, a
+
+        ;; Version that uses an 8bit multiplicand
+        ;;
+        ;; Entry conditions
+        ;;   C  = multiplicand
+        ;;   DE = multiplier
+        ;;   A  = 0
+        ;;
+        ;; Exit conditions
+        ;;   BC = less significant word of product
+        ;;
+        ;; Register used: AF,BC,DE,HL
+.mul8:
+        ld      l,a
+        ld      b,#8
+        ld      a,c
+loop8:
+        add     hl,hl
+        rla
+        jr      NC,skip8
+        add     hl,de
+skip8:
+        dec     b
+        jr      NZ,loop8
 
         ;; Return in bc
         ld      c,l
